--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              { "glob": "demo.json", "input": "./", "output": "./assets/" }
+            ],
             "styles": ["src/styles.scss"],
             "scripts": []
           },
